--- a/000_Sam_Segmentation.ipynb
+++ b/000_Sam_Segmentation.ipynb
@@ -47,12 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'dataset/testfolder_segmentation'\n",
+    "path = 'dataset/datensatz_2000_v1'\n",
     "path = path + '/'\n",
     "device = \"cuda\"\n",
     "default_ratio = 3.5\n",
     "min_pixel = 12000 # für höhe 100 sehr guter wert: 12000\n",
-    "max_pixel = 35000 # für höhe 100 sehr guter wert: 24000"
+    "max_pixel = 35000 # für höhe 100 sehr guter wert: 35000 oder 24000 falls 35000 nicht geht"
    ]
   },
   {
