--- a/002_NN_tranieren.ipynb
+++ b/002_NN_tranieren.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "from train_dataset import DataServoStereo\n",
     "import train_model as model\n",
-    "\n"
+    "import time\n"
    ]
   },
   {
@@ -217,8 +217,14 @@
     "    #for i, (inL0,outS_Tensor,outS) in enumerate(loader_train):\n",
     "    lossC_epoch = []\n",
     "    lossI_epoch = []\n",
+    "    starttime = time.time()\n",
     "\n",
     "    for i, (img,plug_mask_tensor,plug_mask) in enumerate(loader_train):\n",
+    "\n",
+    "\n",
+    "        if i % 100 == 0 and i != 0:\n",
+    "            print(\"Trainierte Batches in dieser Epoche: \",i)\n",
+    "            print(\"Benötigte Zeit für das Training seit Beginn: \",time.time() - starttime)\n",
     "\n",
     "        # enable GPU if enabled in arguments\n",
     "        if gpu_enabled == True:\n",
