--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,7 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")"
+    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")\n",
+    "# gut servoing_csv/keypoints_servoing_720_x_y_5mm.csv\n",
+    "# schlecht servoing_csv/keypoints_servoing_0.00005_v2.csv\n",
+    "# schlecht servoing_csv/keypoints_servoing_0.00005_v2.csv\n",
+    "\n"
    ]
   },
   {
@@ -131,7 +135,7 @@
     "\n",
     "# Display the plot\n",
     "plt.suptitle('Time Values while Servoing', fontsize=24)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -186,13 +190,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keypoint_number = 3 # starts with 0\n",
+    "keypoint_number = 1 # starts with 0\n",
     "\n",
     "plt.plot(pixel_error[keypoint_number])\n",
     "plt.xlabel('Servoing Step')\n",
     "plt.ylabel('Pixel Error')\n",
     "plt.title('Pixel Error of Keypoint ' + str(keypoint_number))\n",
     "plt.legend(['x-error of Keypoint '+str(keypoint_number), 'y-error of the Keypoint '+str(keypoint_number)], loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
+    "plt.grid()\n",
     "plt.show()\n",
     "\n"
    ]
@@ -210,7 +215,7 @@
     "for keypoint_number in range(num_keypoints):  # Assuming num_keypoints is the total number of keypoints\n",
     "    plt.plot(pixel_error[keypoint_number])\n",
     "\n",
-    "plt.xlabel('Servoing Step')\n",
+    "plt.xlabel('Servoing Steservoing_csv/keypoints_servoing_0.00005_v2.csvp')\n",
     "plt.ylabel('Pixel Error')\n",
     "plt.title('Pixel Error of All Keypoints')\n",
     "\n",
@@ -218,6 +223,7 @@
     "legend_labels = ['Keypoint {}'.format(keypoint_number) for keypoint_number in range(num_keypoints)]\n",
     "\n",
     "#plt.legend(legend_labels, loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
+    "plt.grid()\n",
     "plt.show()\n"
    ]
   },
@@ -278,10 +284,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "fig, (ax1, ax2) = plt.subplots(2, 2, figsize=(30, 20))\n",
-    "\n",
-    "# Plot 1: Velocity in x-direction\n",
+    "keypoints_selected = [0,1,4,6,7,9,11,12,14,16,19,20,22,24,26,27,28,29,30,31]\n",
+    "#keypoints_selected = [6,7,9,14,16,19,20,24]\n",
     "ax1[0].plot(velocity[0])\n",
     "ax1[0].set_title(\"Velocity in x-direction\")\n",
     "ax1[0].set_xlabel(\"Servoing Step\")\n",
