--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -367,11 +367,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keypoint_1 = 0\n",
-    "keypoint_2 = 1\n",
-    "keypoint_3 = 2\n",
-    "keypoint_4 = 9\n",
-    "keypoint_5 = 4\n",
+    "# nicht bewegbare Keypoints v_7_NN [2,3,5,8,10,13,15,17,18,21,23,25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keypoint_1 = 19\n",
+    "keypoint_2 = 20\n",
+    "keypoint_3 = 22\n",
+    "keypoint_4 = 24\n",
+    "keypoint_5 = 26\n",
     "\n",
     "\n",
     "print(\"keypoint_1 hat die Nummer: \",keypoint_1, \"und die Start-Kooridnaten: \", keypoint_pos_alle_bilder[0][keypoint_1])\n",
@@ -558,7 +567,6 @@
     "    pixelabweichung_keypoint_3_x = keypoint_3_x - keyppoint_3_x_pred\n",
     "    pixelabweichung_keypoint_4_x = keypoint_4_x - keyppoint_4_x_pred\n",
     "    pixelabweichung_keypoint_5_x = keypoint_5_x - keyppoint_5_x_pred\n",
-    "\n",
     "\n",
     "    # Berechnen der Standardabweichung\n",
     "\n",
