--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,11 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")\n",
-    "# gut servoing_csv/keypoints_servoing_720_x_y_5mm.csv\n",
-    "# schlecht servoing_csv/keypoints_servoing_0.00005_v2.csv\n",
-    "# schlecht servoing_csv/keypoints_servoing_0.00005_v2.csv\n",
-    "\n"
+    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")"
    ]
   },
   {
@@ -121,6 +117,7 @@
     "ax1.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
     "ax1.title.set_text('Time Values while Servoing')\n",
     "ax1.title.set_fontsize(18)\n",
+    "ax1.grid()\n",
     "\n",
     "# Plot the mean values on the right subplot (ax2)\n",
     "ax2.axhline(y=mean_interference_neural_networks, color=\"blue\",label=\"Mean Interference Neural Network\")\n",
@@ -132,6 +129,7 @@
     "ax2.set_ylim(0, max(mean_interference_neural_networks, mean_time_for_keypoint_extraction, mean_time_for_servoing_loop)*1.4)\n",
     "ax2.title.set_text('Mean Time Values')\n",
     "ax2.title.set_fontsize(18)\n",
+    "ax2.grid()\n",
     "\n",
     "# Display the plot\n",
     "plt.suptitle('Time Values while Servoing', fontsize=24)\n",
@@ -215,7 +213,7 @@
     "for keypoint_number in range(num_keypoints):  # Assuming num_keypoints is the total number of keypoints\n",
     "    plt.plot(pixel_error[keypoint_number])\n",
     "\n",
-    "plt.xlabel('Servoing Steservoing_csv/keypoints_servoing_0.00005_v2.csvp')\n",
+    "plt.xlabel('Iterationes')\n",
     "plt.ylabel('Pixel Error')\n",
     "plt.title('Pixel Error of All Keypoints')\n",
     "\n",
@@ -284,13 +282,14 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "keypoints_selected = [0,1,4,6,7,9,11,12,14,16,19,20,22,24,26,27,28,29,30,31]\n",
-    "#keypoints_selected = [6,7,9,14,16,19,20,24]\n",
+    "\n",
+    "fig, (ax1, ax2) = plt.subplots(2, 2, figsize=(30, 20))\n",
     "ax1[0].plot(velocity[0])\n",
     "ax1[0].set_title(\"Velocity in x-direction\")\n",
     "ax1[0].set_xlabel(\"Servoing Step\")\n",
     "ax1[0].set_ylabel(\"Velocity in m/s\")\n",
     "ax1[0].legend()\n",
+    "ax1[0].grid()  \n",
     "\n",
     "# Plot 2: Velocity in y-direction\n",
     "ax1[1].plot(velocity[1])\n",
@@ -298,6 +297,7 @@
     "ax1[1].set_xlabel(\"Servoing Step\")\n",
     "ax1[1].set_ylabel(\"Velocity in m/s\")\n",
     "ax1[1].legend()\n",
+    "ax1[1].grid()\n",
     "\n",
     "# Plot 3: Polynomial interpolation for Velocity in x-direction\n",
     "x = np.arange(len(velocity[0]))\n",
@@ -309,6 +309,7 @@
     "ax2[0].set_xlabel(\"Servoing Step\")\n",
     "ax2[0].set_ylabel(\"Velocity in m/s\")\n",
     "ax2[0].legend()\n",
+    "ax2[0].grid()\n",
     "\n",
     "# Plot 4: Polynomial interpolation for Velocity in y-direction\n",
     "fit_coeffs_y = np.polyfit(x, velocity[1], deg=3)  # Adjust degree as needed\n",
@@ -319,6 +320,7 @@
     "ax2[1].set_xlabel(\"Servoing Step\")\n",
     "ax2[1].set_ylabel(\"Velocity in m/s\")\n",
     "ax2[1].legend()\n",
+    "ax2[1].grid()\n",
     "\n",
     "plt.suptitle('Twist while Servoing', fontsize=24)\n",
     "plt.tight_layout()\n",
