--- a/008_Analyse_Servoing.ipynb
+++ b/008_Analyse_Servoing.ipynb
@@ -288,7 +288,7 @@
     "ax1[0].set_title(\"Velocity in x-direction\")\n",
     "ax1[0].set_xlabel(\"Servoing Step\")\n",
     "ax1[0].set_ylabel(\"Velocity in m/s\")\n",
-    "ax1[0].legend()\n",
+    "ax1[0].legend()007_Analyse_Servoing.ipynb\n",
     "ax1[0].grid()  \n",
     "\n",
     "# Plot 2: Velocity in y-direction\n",
@@ -354,6 +354,46 @@
     "plt.ylabel('Linear factor')\n",
     "plt.show()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Zielbild und Enpose Visueller Vergleich"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zielbild = cv2.imread('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
+    "print(goal_featurepoints[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Das Bild einlesen\n",
+    "zielbild = cv2.imread('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
+    "\n",
+    "# Über jeden Punkt iterieren\n",
+    "for point in goal_featurepoints:\n",
+    "    # Den Punkt auf das Bild zeichnen\n",
+    "    zielbild = cv2.circle(zielbild, tuple(point), radius=0.2, color=(0,0,255), thickness=-1)\n",
+    "\n",
+    "# Das bearbeitete Bild anzeigen\n",
+    "cv2.imshow('Zielbild', zielbild)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
