--- a/008_Analyse_Servoing.ipynb
+++ b/008_Analyse_Servoing.ipynb
@@ -288,7 +288,7 @@
     "ax1[0].set_title(\"Velocity in x-direction\")\n",
     "ax1[0].set_xlabel(\"Servoing Step\")\n",
     "ax1[0].set_ylabel(\"Velocity in m/s\")\n",
-    "ax1[0].legend()007_Analyse_Servoing.ipynb\n",
+    "ax1[0].legend()\n",
     "ax1[0].grid()  \n",
     "\n",
     "# Plot 2: Velocity in y-direction\n",
