--- a/008_Analyse_Servoing.ipynb
+++ b/008_Analyse_Servoing.ipynb
@@ -369,6 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "zielbild = cv2.imread('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
     "print(goal_featurepoints[1])"
    ]
@@ -388,7 +389,7 @@
     "# Über jeden Punkt iterieren\n",
     "for point in goal_featurepoints:\n",
     "    # Den Punkt auf das Bild zeichnen\n",
-    "    zielbild = cv2.circle(zielbild, tuple(point), radius=0.2, color=(0,0,255), thickness=-1)\n",
+    "    zielbild = cv2.circle(zielbild, tuple(point), radius=1, color=(0,0,255), thickness=-1)\n",
     "\n",
     "# Das bearbeitete Bild anzeigen\n",
     "cv2.imshow('Zielbild', zielbild)\n",
