--- a/003_NN_testen.ipynb
+++ b/003_NN_testen.ipynb
@@ -311,8 +311,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "move_in_x = \"0.001\" # Robot movement in x-direction\n",
-    "move_in_y = \"0.01\" # Robot movement in y-direction"
+    "move_in_x = \"0.0001\" # Robot movement in x-direction\n",
+    "move_in_y = \"0.0001\" # Robot movement in y-direction"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validation in the direction of the y-axis"
+    "### Validation in the direction of the x-axis"
    ]
   },
   {
@@ -613,9 +613,12 @@
     "    print(\"Steigung Keypoint 4 [px pro Meter]:\", gradient_keypoint_4_x) # in Pixel pro Meter\n",
     "    print(\"Steigung Keypoint 5 [px pro Meter]:\", gradient_keypoint_5_x) # in Pixel pro Meter\n",
     "\n",
+    "    print(\"Mittelwert der Steigungen [px pro Meter]: \", np.mean([gradient_keypoint_1_x, gradient_keypoint_2_x, gradient_keypoint_3_x, gradient_keypoint_4_x, gradient_keypoint_5_x]))\n",
+    "    print(\"Kehrwert des Mittelwerts der Steigungen [Millimeter pro Pixel]: \", abs(1/np.mean([gradient_keypoint_1_x, gradient_keypoint_2_x, gradient_keypoint_3_x, gradient_keypoint_4_x, gradient_keypoint_5_x])*1000))\n",
+    "\n",
     "    # Berechne die Standardabweichung der Steigungen mit numpy\n",
     "    std_gradient_x = np.std([gradient_keypoint_1_x, gradient_keypoint_2_x, gradient_keypoint_3_x, gradient_keypoint_4_x, gradient_keypoint_5_x])\n",
-    "    print(\"Standardabweichung der Steigungen [px pro Meter]: \", std_gradient_x) # in Pixel pro Meter"
+    "    #print(\"Standardabweichung der Steigungen [px pro Meter]: \", std_gradient_x) # in Pixel pro Meter"
    ]
   },
   {
