--- a/007_Analyse_Servoing.ipynb
+++ b/007_Analyse_Servoing.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")"
+    "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/servoing_csv/Analyse_Kamerarauschen_statisches_Bild.csv\")"
    ]
   },
   {
@@ -193,7 +193,7 @@
     "plt.plot(pixel_error[keypoint_number])\n",
     "plt.xlabel('Servoing Step')\n",
     "plt.ylabel('Pixel Error')\n",
-    "plt.title('Pixel Error of Keypoint ' + str(keypoint_number))\n",
+    "plt.title('Pixel Error of Keypoin/home/scco0002/F&E_DeepLearning_VS/F-E-Project_Part_2/servoing_csv/key_alle_720_5mm_gute_config_kein Regelfehler_1500Iterationen.csvt ' + str(keypoint_number))\n",
     "plt.legend(['x-error of Keypoint '+str(keypoint_number), 'y-error of the Keypoint '+str(keypoint_number)], loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
     "plt.grid()\n",
     "plt.show()\n",
