--- a/008_Analyse_Servoing.ipynb
+++ b/008_Analyse_Servoing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -449,28 +449,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from PIL import ImageOps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pixcelerror between the goal Feature Points and the end feature Points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[176, 210]\n"
+      "[[177 207]\n",
+      " [236 210]\n",
+      " [196 214]\n",
+      " [216 215]\n",
+      " [206 215]\n",
+      " [218 205]\n",
+      " [181 215]\n",
+      " [241 204]]\n",
+      "[[176, 210], [234, 212], [194, 217], [214, 218], [204, 218], [216, 208], [180, 218], [240, 207]]\n",
+      "[[176, 210], [234, 212], [194, 217], [214, 218], [204, 218], [216, 208], [180, 218], [240, 207]]\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "from PIL import ImageOps\n",
-    "\n",
-    "print(featurepoints[0]) # feature points of the last image in the csv file"
+    "print(goal_featurepoints)\n",
+    "print(servoing_informations[-1][0])\n",
+    "goal_featurepoints = np.array(goal_featurepoints, dtype=np.int64)\n",
+    "end_featurepoints = eval(servoing_informations[-1][0])\n",
+    "print(end_featurepoints)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durchschnittlicher Pixelfehler in x-Richtung: 1.625\n",
+      "Durchschnittlicher Pixelfehler in y-Richtung: 2.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# goal_featurepoints = [[177, 215], [236, 210], [196, 214], [216, 215], [206, 215], [218, 205], [181, 215], [241, 204]]\n",
+    "# servoing_information = [[176, 210], [234, 212], [194, 217], [214, 218], [204, 218], [216, 208], [180, 218], [240, 207]]\n",
+    "\n",
+    "# Berechnung der Differenzen zwischen den Koordinaten in x- und y-Richtung\n",
+    "differences = np.array(goal_featurepoints) - np.array(end_featurepoints)\n",
+    "\n",
+    "# Durchschnittliche Pixelfehler in x- und y-Richtung\n",
+    "average_pixel_error = np.mean(abs(differences), axis=0)\n",
+    "\n",
+    "print(\"Durchschnittlicher Pixelfehler in x-Richtung:\", average_pixel_error[0])\n",
+    "print(\"Durchschnittlicher Pixelfehler in y-Richtung:\", average_pixel_error[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durchschnittlicher Pixelfehler in x-Richtung: 1.8200000000000003\n",
+      "Durchschnittlicher Pixelfehler in y-Richtung: 3.22\n"
+     ]
+    }
+   ],
+   "source": [
+    "pixel_in_mm = 1.12 # wieviel enspricht ein Pixel in mm bei Kameraeinstellung im Mittel 870 pixel pro Meter\n",
+    "\n",
+    "print(\"Durchschnittlicher Pixelfehler in x-Richtung:\", average_pixel_error[0]*pixel_in_mm)\n",
+    "print(\"Durchschnittlicher Pixelfehler in y-Richtung:\", average_pixel_error[1]*pixel_in_mm) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vizualation of the End and Goal Feature Points in the goal Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -551,31 +636,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Image' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m     scaled_featurepoints\u001b[39m.\u001b[39mappend(scaled_point)\n\u001b[1;32m      7\u001b[0m     \u001b[39m# Färbe den entsprechenden Pixel rot\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m     patched_img[scaled_point[\u001b[39m1\u001b[39;49m], scaled_point[\u001b[39m0\u001b[39;49m]] \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m255\u001b[39m]  \u001b[39m# BGR color\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[39m# Save the edited image\u001b[39;00m\n\u001b[1;32m     11\u001b[0m cv2\u001b[39m.\u001b[39mimwrite(\u001b[39m'\u001b[39m\u001b[39m/home/svenportable/FuE/F-E-Project_Part_2/servoing_csv/validation_picture/validation_picture.png\u001b[39m\u001b[39m'\u001b[39m, patched_img)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'Image' object does not support item assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Add the Keypoints of the Goal Image\n",
+    "# Convert the PIL Image to a numpy array (and convert RGB to BGR for use with cv2)\n",
+    "patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
     "scaled_featurepoints = []\n",
     "for point in goal_featurepoints:\n",
     "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
     "    scaled_point = [coordinate * 2 for coordinate in point]\n",
     "    scaled_featurepoints.append(scaled_point)\n",
     "\n",
-    "    # Färbe den entsprechenden Pixel rot\n",
-    "    patched_img[scaled_point[1], scaled_point[0]] = [0,0,255]  # BGR color\n",
+    "    # Färbe den Pixel rot\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [0, 0, 255]  # BGR color\n",
     "\n",
+    "# Add the Keypoints of the end Image\n",
+    "\n",
+    "# Save the edited image\n",
+    "cv2.imwrite('/home/svenportable/FuE/F-E-Project_Part_2/servoing_csv/validation_picture/validation_picture.png', patched_img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add the Keypoints of the Goal Image\n",
+    "# Convert the PIL Image to a numpy array (and convert RGB to BGR for use with cv2)\n",
+    "patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "scaled_featurepoints = []\n",
+    "for point in goal_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "\n",
+    "    # Färbe den Pixel rot\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [0, 0, 255]  # BGR color\n",
+    "\n",
+    "# Add the Keypoints of the end Image\n",
+    "# Coloring for servoing_information points in blue\n",
+    "scaled_featurepoints = []\n",
+    "for point in end_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "    #Färbe den Pixel\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
     "# Save the edited image\n",
     "cv2.imwrite('/home/svenportable/FuE/F-E-Project_Part_2/servoing_csv/validation_picture/validation_picture.png', patched_img)\n"
    ]
@@ -585,24 +707,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Convert the PIL Image to a numpy array (and convert RGB to BGR for use with cv2)\n",
-    "# patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "# scaled_featurepoints = []\n",
-    "# for point in goal_featurepoints:\n",
-    "#     # Multipliziere jeden Punkt mit dem Faktor 2\n",
-    "#     scaled_point = [coordinate * 2 for coordinate in point]\n",
-    "#     scaled_featurepoints.append(scaled_point)\n",
-    "\n",
-    "#     # Den skalierten Punkt auf das Bild zeichnen\n",
-    "#     patched_img = cv2.circle(patched_img, tuple(scaled_point), radius=-1, color=(0,0,255), thickness=-1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # Save the edited image\n",
-    "# cv2.imwrite('/home/svenportable/FuE/F-E-Project_Part_2/servoing_csv/validation_picture/validation_picture.png', patched_img)"
-   ]
+   "source": []
   },
   {
    "attachments": {},
