--- a/008_Analyse_Servoing.ipynb
+++ b/008_Analyse_Servoing.ipynb
@@ -56,7 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_selected_720_5mm_2 config_geringer_regelfehler_1500Iterationen.csv\")"
+    "#goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")\n",
+    "goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_selected_720_5mm_2 config_geringer_regelfehler_1500Iterationen.csv\")\n"
    ]
   },
   {
@@ -302,7 +303,7 @@
     "\n",
     "# Plot 3: Polynomial interpolation for Velocity in x-direction\n",
     "x = np.arange(len(velocity[0]))\n",
-    "fit_coeffs_x = np.polyfit(x, velocity[0], deg=3)  # Adjust degree as needed\n",
+    "fit_coeffs_x = np.polyfit(x, velocity[0], deg=50)  # Adjust degree as needed\n",
     "fit_x = np.polyval(fit_coeffs_x, x)\n",
     "ax2[0].plot(x, velocity[0], label=\"Data\")\n",
     "ax2[0].plot(x, fit_x, label=\"Polynomial Fit\")\n",
@@ -313,7 +314,7 @@
     "ax2[0].grid()\n",
     "\n",
     "# Plot 4: Polynomial interpolation for Velocity in y-direction\n",
-    "fit_coeffs_y = np.polyfit(x, velocity[1], deg=3)  # Adjust degree as needed\n",
+    "fit_coeffs_y = np.polyfit(x, velocity[1], deg=50)  # Adjust degree as needed\n",
     "fit_y = np.polyval(fit_coeffs_y, x)\n",
     "ax2[1].plot(x, velocity[1], label=\"Data\")\n",
     "ax2[1].plot(x, fit_y, label=\"Polynomial Fit\")\n",
@@ -469,13 +470,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Goal image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the image\n",
-    "img = Image.open('servoing_csv/goal_pic/goal_picture.png')\n",
+    "img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
+    "\n",
+    "# Define the desired size\n",
+    "desired_size = (720, 720)\n",
+    "\n",
+    "# Call the img_patch function\n",
+    "patched_img = img_patch(img, desired_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the Keypoints of the Goal Image\n",
+    "# Convert the PIL Image to a numpy array (and convert RGB to BGR for use with cv2)\n",
+    "patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "scaled_featurepoints = []\n",
+    "for point in goal_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "\n",
+    "    # Färbe den Pixel rot\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [0, 0, 255]  # BGR color\n",
+    "\n",
+    "cv2.imwrite('servoing_csv/validation_picture/validation_only_goal_picture.png', patched_img)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Current Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/current_pic/current_picture.png')\n",
+    "\n",
+    "# Define the desired size\n",
+    "desired_size = (720, 720)\n",
+    "\n",
+    "# Call the img_patch function\n",
+    "patched_img = img_patch(img, desired_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "scaled_featurepoints = []\n",
+    "for point in end_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "    #Färbe den Pixel\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
+    "\n",
+    "cv2.imwrite('servoing_csv/validation_picture/validation_only_current_picture.png', patched_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Both, based current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "#img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
+    "img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/current_pic/current_picture.png')\n",
     "\n",
     "# Define the desired size\n",
     "desired_size = (720, 720)\n",
@@ -512,16 +608,64 @@
     "    scaled_featurepoints.append(scaled_point)\n",
     "    #Färbe den Pixel\n",
     "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
-    "# Save the edited image\n",
-    "cv2.imwrite('servoing_csv/validation_picture/validation_img.png', patched_img)\n"
+    "#Save the edited image\n",
+    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_current_picture.png', patched_img)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# "
+    "### Both, based goal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the image\n",
+    "img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/goal_pic/goal_picture.png')\n",
+    "#img = Image.open('/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/img/current_pic/current_picture.png')\n",
+    "\n",
+    "# Define the desired size\n",
+    "desired_size = (720, 720)\n",
+    "\n",
+    "# Call the img_patch function\n",
+    "patched_img = img_patch(img, desired_size)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the Keypoints of the Goal Image\n",
+    "# Convert the PIL Image to a numpy array (and convert RGB to BGR for use with cv2)\n",
+    "patched_img = cv2.cvtColor(np.array(patched_img), cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "scaled_featurepoints = []\n",
+    "for point in goal_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "\n",
+    "    # Färbe den Pixel rot\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [0, 0, 255]  # BGR color\n",
+    "\n",
+    "# Add the Keypoints of the end Image\n",
+    "# Coloring for servoing_information points in blue\n",
+    "scaled_featurepoints = []\n",
+    "for point in end_featurepoints:\n",
+    "    # Multipliziere jeden Punkt mit dem Faktor 2\n",
+    "    scaled_point = [coordinate * 2 for coordinate in point]\n",
+    "    scaled_featurepoints.append(scaled_point)\n",
+    "    #Färbe den Pixel\n",
+    "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
+    "#Save the edited image\n",
+    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_goal_picture.png', patched_img)"
    ]
   }
  ],
