--- a/008_Analyse_Servoing_v2.ipynb
+++ b/008_Analyse_Servoing_v2.ipynb
@@ -678,7 +678,7 @@
     "current_pose = []\n",
     "\n",
     "for i in range(0, len(servoing_informations)):\n",
-    "    servoing_informations[i][8] = eval(servoing_informations[i][8])\n",
+    "    #servoing_informations[i][8] = eval(servoing_informations[i][8])\n",
     "    current_pose.append(servoing_informations[i][8])\n",
     "\n",
     "delta_x = []\n",
