--- a/008_Analyse_Servoing_v2.ipynb
+++ b/008_Analyse_Servoing_v2.ipynb
@@ -17,7 +17,8 @@
     "import matplotlib.pyplot as plt\n",
     "import csv\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from scipy.spatial.transform import Rotation as R"
    ]
   },
   {
@@ -214,7 +215,16 @@
     "for keypoint_number in range(num_keypoints):  # Assuming num_keypoints is the total number of keypoints\n",
     "    plt.plot(pixel_error[keypoint_number])\n",
     "\n",
-    "plt.xlabel('Iterationes')servoing_informations"
+    "plt.xlabel('Iterationes')\n",
+    "plt.ylabel('Pixel Error')\n",
+    "plt.title('Pixel Error of All Keypoints')\n",
+    "\n",
+    "# Generate labels for the legend\n",
+    "legend_labels = ['Keypoint {}'.format(keypoint_number) for keypoint_number in range(num_keypoints)]\n",
+    "\n",
+    "#plt.legend(legend_labels, loc='lower center', bbox_to_anchor=(0.5, -0.3), ncol=2)\n",
+    "plt.grid()\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -341,12 +351,88 @@
     "\n",
     "# Plot the linear factor\n",
     "plt.figure(figsize=(15, 5))\n",
+    "plt.grid()\n",
     "plt.plot(lin_factor)\n",
     "plt.title('Linear factor')\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Linear factor')\n",
     "plt.show()\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize Robotpose and Robotorientation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_pose = goal_informations[5]\n",
+    "goal_pose = eval(goal_pose)\n",
+    "roll_goal,pitch_goal,yaw_goal = R.from_quat([goal_pose[3],goal_pose[4],goal_pose[5],goal_pose[6]]).as_euler('xyz', degrees=True)\n",
+    "\n",
+    "current_pose = []\n",
+    "\n",
+    "for i in range(0, len(servoing_informations)):\n",
+    "    servoing_informations[i][8] = eval(servoing_informations[i][8])\n",
+    "    current_pose.append(servoing_informations[i][8])\n",
+    "\n",
+    "delta_x = []\n",
+    "delta_y = []\n",
+    "rotation_z = []\n",
+    "\n",
+    "for i in range(0, len(servoing_informations)):\n",
+    "    delta_x.append(servoing_informations[i][8][0] - goal_pose[0])\n",
+    "    delta_y.append(servoing_informations[i][8][1] - goal_pose[1])\n",
+    "    roll_current,pitch_current,yaw_current = R.from_quat([servoing_informations[i][8][3],servoing_informations[i][8][4],servoing_informations[i][8][5],servoing_informations[i][8][6]]).as_euler('xyz', degrees=True)\n",
+    "    rotation_z.append(yaw_current - yaw_goal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(30, 10))\n",
+    "\n",
+    "ax1.grid()\n",
+    "ax1.plot(delta_x)\n",
+    "ax1.set_title(\"Distance to goal in x-direction\")\n",
+    "ax1.axhline(0, color='red', linestyle='--') \n",
+    "ax1.set_xlabel(\"Servoing Step\", fontsize=16)\n",
+    "ax1.set_ylabel(\"Distance in m\", fontsize=16)\n",
+    "\n",
+    "ax2.grid()\n",
+    "ax2.plot(delta_y)\n",
+    "ax2.set_title(\"Distance to goal y-direction\")\n",
+    "ax2.axhline(0, color='red', linestyle='--') \n",
+    "ax2.set_xlabel(\"Servoing Step\", fontsize=16)\n",
+    "ax2.set_ylabel(\"Distance in m\", fontsize=16)\n",
+    "\n",
+    "plt.suptitle('Distance to goal while Servoing', fontsize=24)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(15, 5))\n",
+    "plt.plot(rotation_z)\n",
+    "plt.grid()\n",
+    "plt.title('Angle to goal around z-axis')    \n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel('Angle in degrees')\n",
+    "plt.show()"
    ]
   },
   {
@@ -502,7 +588,10 @@
     "    # Färbe den Pixel rot\n",
     "    patched_img[scaled_point[1], scaled_point[0]] = [0, 0, 255]  # BGR color\n",
     "\n",
-    "cv2.imwrite('servoing_csv/validation_picture/validation_only_goal_picture.png', patched_img)\n"
+    "cv2.imwrite('servoing_csv/validation_picture/validation_only_goal_picture.png', patched_img)\n",
+    "\n",
+    "# zeige das Bild an\n",
+    "plt.imshow(patched_img)\n"
    ]
   },
   {
@@ -544,7 +633,10 @@
     "    #Färbe den Pixel\n",
     "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
     "\n",
-    "cv2.imwrite('servoing_csv/validation_picture/validation_only_current_picture.png', patched_img)"
+    "cv2.imwrite('servoing_csv/validation_picture/validation_only_current_picture.png', patched_img)\n",
+    "\n",
+    "# zeige das Bild an\n",
+    "plt.imshow(patched_img)"
    ]
   },
   {
@@ -600,7 +692,13 @@
     "    #Färbe den Pixel\n",
     "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
     "#Save the edited image\n",
-    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_current_picture.png', patched_img)"
+    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_current_picture.png', patched_img)\n",
+    "\n",
+    "# zeige das Bild an\n",
+    "plt.imshow(patched_img)\n",
+    "\n",
+    "# zeige das Bild an\n",
+    "plt.imshow(patched_img)"
    ]
   },
   {
@@ -656,39 +754,10 @@
     "    #Färbe den Pixel\n",
     "    patched_img[scaled_point[1], scaled_point[0]] = [255, 0, 0]  # Blue\n",
     "#Save the edited image\n",
-    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_goal_picture.png', patched_img)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualize Robotpose and Robotorientation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "goal_pose = goal_informations[5]\n",
-    "goal_pose = eval(goal_pose)\n",
+    "cv2.imwrite('servoing_csv/validation_picture/validation_both_based_goal_picture.png', patched_img)\n",
     "\n",
-    "current_pose = []\n",
-    "\n",
-    "for i in range(0, len(servoing_informations)):\n",
-    "    #servoing_informations[i][8] = eval(servoing_informations[i][8])\n",
-    "    current_pose.append(servoing_informations[i][8])\n",
-    "\n",
-    "delta_x = []\n",
-    "delta_y = []\n",
-    "\n",
-    "for i in range(0, len(servoing_informations)):\n",
-    "    delta_x.append(servoing_informations[i][8][0] - goal_pose[0])\n",
-    "    delta_y.append(servoing_informations[i][8][1] - goal_pose[1])\n",
-    "\n",
-    "\n"
+    "# zeige das Bild an\n",
+    "plt.imshow(patched_img)"
    ]
   }
  ],
