--- a/008_Analyse_Servoing_v2.ipynb
+++ b/008_Analyse_Servoing_v2.ipynb
@@ -58,7 +58,9 @@
    "outputs": [],
    "source": [
     "goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing.csv\")\n",
-    "#goal_informations, servoing_informations= read_csv_file(\"servoing_csv/keypoints_selected_720_5mm_2 config_geringer_regelfehler_1500Iterationen.csv\")\n"
+    "#goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing_hough.csv\")\n",
+    "#goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing_constantin_uber_Stecker.csv\")\n",
+    "#goal_informations, servoing_informations= read_csv_file(\"/home/scco0002/catkin_ws/src/iaps_ur5e_sim/scripts/kovis_moduls/keypoints_servoing_constantin_5mm_v2.csv\")"
    ]
   },
   {
@@ -348,7 +350,7 @@
     "lin_factor = []\n",
     "for i in range(len(servoing_informations)):\n",
     "    lin_factor.append(servoing_informations[i][7])\n",
-    "\n",
+    "False\n",
     "# Plot the linear factor\n",
     "plt.figure(figsize=(15, 5))\n",
     "plt.grid()\n",
